--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,19 +52,21 @@
 }
 
 .menu{
-    width: 45%;
+    width: 100%;
     margin: 0 5px;
 }
 
 .menu nav ul{
     display: flex;
     list-style: none;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
 }
 
 .menu nav li a{
     text-decoration: none;
+    text-align: none;
+    margin: 0 15px;
+    padding: 3px;
     color: var(--color-solid-white);
     font-size: 1em;
     font-weight: bold;
@@ -79,10 +81,49 @@
     color: var(--color-solid-white);
     background-color: var(--color-solid-yellow);
     width: 40px;
-    height: 40px;
+    height: 35px;
     text-align: center;
-    line-height: 40px;
+    line-height: 35px;
     font-size: 20px;
     border-radius: 5px;
+    min-width: 40px;
+}
+
+/* RESPONSIVE */
+@media screen and (max-width:900px){
+    nav{
+        display: none;
+    }
+
+    .menu-responsive{
+        display: block;
+    }
+
+    nav.responsive{
+        display: block;
+        position: fixed;
+        right: 0;
+        top : 80px;
+        background-color: var(--color-translucent-blue);
+    }
+
+    nav.responsive ul{
+        display: flex !important;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: start;
+        padding: 5px;
+        height: 100vh;
+    }
+
+    nav.responsive ul li{
+        border-bottom: 1px solid var(--color-solid-yellow);
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    nav.responsive ul li a{
+        font-size: 1.5em;
+    }
 }
 
