--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,7 @@
 .aboutme .row .col .interests-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .aboutme .row .col .interests-container .interest{
@@ -813,11 +814,11 @@ footer .up{
     }
 
     .aboutme .row{
-        flex-direction: column;
+        display: block;
     }
 
     .aboutme .row .col{
-        width: fit-content;
+        width: 100%;
     }
 
     .aboutme .row .col ul li strong{
